--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="phaser.min.js"></script>
     <script type="text/javascript" src="scenes/Scene1.js"></script>
     <script type="text/javascript" src="scenes/Scene2.js"></script>
+    <script type="text/javascript" src="classes/beam.js"></script>
     <script type="text/javascript" src="game.js"></script>
     <title>Phaser</title>
 </head>
